--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,10 @@
 }
 
 .App-header {
+  /* position: absolute; */
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 60vh;
+  top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
